--- a/Resources/main.css
+++ b/Resources/main.css
@@ -5,6 +5,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
     color: white;
     font-size: 3rem;
     letter-spacing: normal;
+    font-weight: 400;
 }
 
 p, ul {
@@ -14,6 +15,7 @@ p, ul {
 
 h1, .h1-green {
     font-size: 4rem;
+    font-weight: 600;
 }
 
 .h1-green {
@@ -21,22 +23,37 @@ h1, .h1-green {
 }
 
 h2 {
-    font-size: 2.5rem;
-}
-
-h3 {
     font-size: 2rem;
 }
 
+h3 {
+    font-size: 1.5rem;
+}
 
-.pointer::before {
-    content: '';
-    display: block;
-    background: url('./Icons/Arrow-icon.svg') no-repeat;
-    width: 1.5rem;
-    height: 1.9rem;
-    float: left;
-    margin-top: 0.5rem;
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 50px;
+}
+
+.header {
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: #2a7561;
+}
+
+.button {
+    background-color: #2a7561;
+    color: white;
+    border: 2px solid #2a7561;
+    border-radius: 5px;
+    padding: 2px 10px 0;
+}
+
+.button:hover {
+    background-color: #93b9cc;
+    border: 2px solid #2a7561;
+    color: #2a7561;
+    cursor: pointer;
 }
 
 body {
@@ -58,6 +75,10 @@ nav {
     z-index: 10;
 }
 
+nav h2 {
+    font-size: 2.5rem;
+}
+
 #nav-menu-button {
     width: 29px;
 }
@@ -73,4 +94,16 @@ menu {
     text-align: right;
     transition: top .5s;
     z-index: 9;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    padding: 10px;
+    background-color: #83a4b4;
+    line-height: 0.8;
+    z-index: 10;
 }
